[package]
name = "nitro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocator-api2 = "0.2"

[dev-dependencies]
criterion = "0.5"
shared_arena = "0.8.4"
generational-arena = "0.2"
froggy = "0.4"
blink-alloc = "0.3.1"
hecs = "0.10"
shipyard = "0.6"
edict = "0.5"
rand = "0.8"

[[bench]]
name = "storage-comparison"
harness = false